fix 2-5extra add 3-5extra

--- a/5-guia/5-sol.tex
+++ b/5-guia/5-sol.tex
@@ -6,7 +6,7 @@
 % Info para armar título.
 \title{Práctica 5 de álgebra 1} % título
 \author{Comunidad algebraica} % autor
-\date{última compilacion: \today} % Cambiar de ser necesario
+\date{\update} % Cambiar de ser necesario
 \maketitle  % para que aprezca el título en el documento
 
 
@@ -22,7 +22,7 @@
 %=========================
 \subsubsection*{Ejercicios extras:}
 
-\foreach \x in {1,...,2} {
+\foreach \x in {1,...,3} {
 		\input{./ejercicios-5-extra/ej-extra-\x-5.tex}
 	}
 
