--- a/5-guia/ejercicios-5-extra/ej-extra-1-5.tex
+++ b/5-guia/ejercicios-5-extra/ej-extra-1-5.tex
@@ -1,7 +1,9 @@
 \ejercicio 
-Hallar los posibles restos de dividir a $a$ por 70, sabiendo que $(a^{1081}+ 3a + 17 : 105) = 35$\\
+Hallar los posibles restos de dividir a $a$ por 70, sabiendo que
+$(a^{1081}+ 3a + 17 : 105) = 35$\\
 
 \separadorCorto
+
 $ (\ub{a^{1081}+ 3a + 17}{m} : \ub{105}{3\cdot 5 \cdot 7})  = \ub{35}{5 \cdot 7}
 	\flecha{notar}[que]
 	\llave{l}{
