--- a/macros/preamble-general.tex
+++ b/macros/preamble-general.tex
@@ -11,6 +11,7 @@
 \usepackage[english]{babel} % Para cortar las palabras en silabas, creo.
 \usepackage[ddmmyyyy]{datetime}
 \usepackage{amsmath} % Soporte de mathmatics
+\usepackage{mathtools} % Más herramientas para matemáctica
 \usepackage{amssymb} % fuentes de mathmatics
 \usepackage{array} % Para tablas y eso
 \usepackage[dvipsnames]{xcolor} % Para colorear el texto: black, blue, brown, cyan, darkgray, gray, green, lightgray, lime, magenta, olive, orange, pink, purple, red, teal, violet, white, yellow.
