--- a/5-guia/ejercicios-5-extra/ej-extra-2-5.tex
+++ b/5-guia/ejercicios-5-extra/ej-extra-2-5.tex
@@ -92,7 +92,7 @@ $ \llaves{c}{
 	}$, para obtener valores distintos de 1 para el MCD.
 \\
 
-\textit{Estudio la divisibilidad $5$:(sujetos a $\llamada2$ y $\llamada3$):}\\
+\textit{Estudio la divisibilidad $5$ (sujeto a $\llamada2$ y $\llamada3$):}\\
 Si
 $ 5 \divideA a^{97} - 36
 	\sisolosi
@@ -119,10 +119,10 @@ $ 5 \divideA a^{97} - 36
 $\\
 
 \textit{Conclusión divisilidad 5: }\\
-\boxed{5 \noDivide a^{97} - 36\quad \paratodo a \en \enteros}\\
+\boxed{5 \noDivide a^{97} - 36\quad \paratodo a \en \enteros \to} el MCD no puede tener un 5 en su factorización. \\\
 
 
-\textit{Estudio la divisibilidad $3$ (sujetos a $\llamada2$ y $\llamada3$):}\\
+\textit{Estudio la divisibilidad $3$ (sujeto a $\llamada2$ y $\llamada3$):}\\
 
 $ 3 \divideA a^{97} - 36
 	\sisolosi
@@ -170,7 +170,7 @@ $ 9 \divideA (3k)^{97} - 36
 $\\
 
 \textit{Conclusión divisilidad 9: }\\
-\boxed{ 9 \divideA a^{97} - 36 \text{ puede ser que } (a^{97} - 26:135) = 9 }
+\boxed{ 9 \divideA a^{97} - 36 \text{ puede ser que } (a^{97} - 26:135) = 9 }\Tilde
 
 
 \textit{Estudio la divisibilidad $27$ en $a = 3k$ por $\llamada4$:}\\
