--- a/6-guia/6-sol.tex
+++ b/6-guia/6-sol.tex
@@ -25,7 +25,7 @@
 %=========================
 \subsubsection*{Ejercicios extras:}
 
-\foreach \x in {1,2} {
+\foreach \x in {1,...,4} {
 		\input{./ejercicios-6-extra/ej-extra-\x-6.tex}
 	}
 
