--- a/7-guia/ejercicios-7/ej-14-7.tex
+++ b/7-guia/ejercicios-7/ej-14-7.tex
@@ -16,12 +16,12 @@
 		      }$\\
 
 	      $ X^2 + X -1 =
-		      [X - (w + w^{-1})] \cdot [X - (w^2 + w^{-2})] =
-		      X^2 - (w^2 + w^{-2}) X - (w + w^{-1}) X + \ub{(w + w^{-1})(w^2 + w^{-2})}{\llamada1}=
-		      X^2 - X(\ub{w^2 + w^{-2} + w + w^{-1}}{\llamada1}) + \ub{ w + w^2 + w^3 + w^4 }{\llamada2}=\\
-		      X^2 - X(\ub{w + w^2 + w^3 + w^4}{\llamada2}) + \magenta{-1} + \ub{ \magenta{1} + w + w^2 + w^3 + w^4}{ = 0} =
-		      X^2 - X(\magenta{-1} + \ub{ \magenta{1} + w + w^2 + w^3 + w^4}{ = 0}) - 1 =
-		      X^2 + X - 1 \Tilde
+		      [X - (w + w^{-1})] \cdot [X - (w^2 + w^{-2})] =\\
+		      X^2 - (w^2 + w^{-2}) X - (w + w^{-1}) X + \ub{(w + w^{-1})(w^2 + w^{-2})}{\llamada1}=\\
+		      = X^2 - X(\ub{w^2 + w^{-2} + w + w^{-1}}{\llamada1}) + \ub{ w + w^2 + w^3 + w^4 }{\llamada2}=\\
+              = X^2 - X(\ub{w + w^2 + w^3 + w^4}{\llamada2}) + \magenta{-1} + \ub{ \magenta{1} + w + w^2 + w^3 + w^4}{ = 0} =
+              {X^2 - X(\magenta{-1} + \ub{ \magenta{1} + w + w^2 + w^3 + w^4}{ = 0}) - 1 =}\\
+		     = X^2 + X - 1 \Tilde
 	      $
 
 	\item Calculando las raíces a mano de
