--- a/7-guia/ejercicios-7/ej-4-7.tex
+++ b/7-guia/ejercicios-7/ej-4-7.tex
@@ -27,8 +27,8 @@ Hallar el cociente y el resto de la división de $f$ por $g$ en los casos
 		      \to
 		      4X^4 + X^3 -4 = (2X^2 + 1) \cdot \ub{(2X^2 + 4X + 6)}{q[X]} + \ub{(3X + 4)}{r[X]}$
 
-	\item Después de hacer un par iteraciones en la división se asoma la idea de que:\\
-	      $ X^n - 1 = (X-1) \cdot \ub{\sumatoria{j=0}{n-1} X^j}{q[X]} + \ub{0}{r[X]} $\\
+	\item Después de hacer un par iteraciones en la división asoma la idea de que:\\
+      $ X^n - 1 = (X-1) \cdot \ub{\sumatoria{j=0}{n-1} X^j}{q[X]} + \ub{0}{r[X]}$, \qquad\qquad{\tiny(que es la geométrica con $X \distinto 1$)}\\
 	      \textit{Inducción: } Quiero probar que $p(n): X^n - 1 = (X-1) \cdot \sumatoria{j=0}{n-1} X^j  \ \paratodo n \en \naturales$\\
 
 	      \textit{Caso base: } $p(\magenta1):
