--- a/7-guia/ejercicios-7/ej-7-7.tex
+++ b/7-guia/ejercicios-7/ej-7-7.tex
@@ -39,6 +39,12 @@ Hallar el resto de la división de $f$ por $g$ para:
 		      \to$
 	      \boxed{r_g(f) = 2X^4 - X^2 + 1}\\
 	      \red{¿Qué onda en $\enteros/p\enteros$?}
+		      $\to
+			      \llave{l}{
+				      \text{si } p = 2 \to \boxed{X^2 + 1}\\
+				      \text{si } p > 2 \to \boxed{2X^4 + (p-1) X^2 + 1}
+			      }
+		      $
 
 	\item
 	      $g \divideA g
