--- a/7-guia/teoria-7/teoria-7.tex
+++ b/7-guia/teoria-7/teoria-7.tex
@@ -8,7 +8,7 @@
 \begin{itemize}
 	\item \textit{Operaciones: }
 	      \begin{itemize}
-		      \item[$+:$] Sean $f,g \en \K[X]$ con $f = \polGen{a}$ y $g = \polGen{b}$\\
+		      gitem[$+:$] Sean $f,g \en \K[X]$ con $f = \polGen{a}$ y $g = \polGen{b}$\\
 		            $\entonces f + g = \sumatoria{i=0}{n} (a_i + b_i) X^i \en \K[X]$
 		      \item[$\cdot:$] Sean $f,g \en \K[X]$ con $f = \polGen{a}$ y $g = \sumatoria{j=0}{m} b_j X^j$\\
 		            $\entonces f \cdot g = \sumatoria{k=0}{n+m} (\sumatoria{i+j=k}{} a_i \cdot b_j) X^k \en \K[X]$
@@ -16,7 +16,7 @@
 	\item $(\K[X],+,\cdot) \text{ es un anillo conmutativo } \to f\cdot(g+h) = f\cdot g + f\cdot h,\, \paratodo f,\,g,\,h \en \K[X]$
 
 	\item \textit{Algoritmo de división}: $f,g \en \K[X]$ no nulos, existen únicos $q$ y $R \en \K[X]$ tal que $f = q\cdot g + R$
-	      con $\gr(R) < \gr(f)$ o $R = 0$
+      con $\gr{R} < \gr{f}$ o $R = 0$
 
 	\item $\alpha$ es raíz de $f \sisolosi X - \alpha \divideA f \sisolosi f = q \cdot ( X - \alpha)$
 
@@ -36,7 +36,7 @@
 		      \item $\alpha$ es raíz \underline{múltiple} de $f \sii f = (x - \alpha)^2 q$ para algún $q \en \K[X]$
 
 		      \item $\alpha$ es raíz \underline{simple} de $f \sii x - \alpha \divideA f$ en $\K[X]$,
-		            pero $(X - \alpha)^2 \noDivide f$ en $\K[X] \sii f= (X - \alpha) q$
+		            pero $(X - \alpha)^2 \noDivide f$ en $\K[X] \sii f = (X - \alpha) q$
 		            para algún $q \en \K[X]$ tal que $q(\alpha) \distinto 0$.
 
 		      \item Sea $m \en \naturales_0$. Se dice que $\alpha$ es raíz de multiplicidad (exactamente)
@@ -46,15 +46,18 @@
 		            pero $q(\alpha) \distinto 0$
 
 		      \item Sea $f \en \K[X]$ no nulo $\mult{\alpha; f} \leq \gr{f}$:
+
+		      \item Sean $f$, $g \en \K[X]$ no ambos nulos, y $\alpha \en \K
+			            \entonces f(\alpha) = f(\alpha) = 0 \sii (f:g)(\alpha) = 0$
 	      \end{itemize}
 
 	\item Vale que $\alpha$ es raíz múltiple de $f \sisolosi f(\alpha) = 0$ y $f'(\alpha) = 0 \sisolosi \alpha$
 	      es raíz de $(f:f'),\, X - \alpha \divideA (f:f')$
 	      \begin{itemize}
-            \item $
-              \mult{\alpha,f} = m 
-              \sisolosi 
-              f(\alpha) = 0$ y $\mult{\alpha;f'} = m-1$
+		      \item $
+			            \mult{\alpha,f} = m
+			            \sisolosi
+			            f(\alpha) = 0$ y $\mult{\alpha;f'} = m-1$
 
 		      \item $\mult{\alpha;f} = m \sisolosi
 			            \llave{rl}{
@@ -62,12 +65,17 @@
 				            \llaveInv{c}{
 					            f(\alpha) = 0\\
 					            \vdots\\
-					            f^{(m-1)(\alpha) = 0}
+                                f^{(m-1)}(\alpha) = 0
 				            }\\
 				            \mult{\alpha;f} = m     &
 				            \llaveInv{c}{
-					            f^{m)(\alpha) \distinto 0}
+                              f^{(m)}(\alpha) \distinto 0
 				            }
 			            }$
 	      \end{itemize}
+
+          \textit{Cantidad de raíces: }
+          \begin{itemize}
+            \item 
+          \end{itemize}
 \end{itemize}
