--- a/macros/definiciones.tex
+++ b/macros/definiciones.tex
@@ -120,7 +120,7 @@
 \renewcommand{\theejercicio}{\arabic{ejercicio}} % el contador es un número arabic
 \newcommand{\ejercicio}{%
 	\stepcounter{ejercicio}% incremento en uno
-	\titleformat{\section}[runin]{\bfseries}{\theejercicio}{0em}{\separador}[ ]%
+    \titleformat{\section}[runin]{\bfseries}{\theejercicio}{0em}{\vspace{40pt}\separador}[ ]%
 	\section*{\theejercicio.}%
 }
 
@@ -144,7 +144,7 @@
 
 % Conjuntos entre llaves
 \newcommand{\set}[1] { \left\{ #1 \right\} }
-\newcommand{\parentesis}[1] { \left( #1 \right) }
+\newcommand{\parentesis}[1]{ \left( #1 \right) }
 
 % Stackrel text
 \newcommand{\stacktext}[2]{ \stackrel{\text{#1}}{#2} }
