ejercicio-> archivos guia 4, enunciado 6,6

--- a/6-guia/ejercicios-6/ej-6-6.tex
+++ b/6-guia/ejercicios-6/ej-6-6.tex
@@ -1,1 +1,9 @@
-\ejercicio\hacer
+\ejercicio
+
+\begin{enumerate}[label=\roman*)]
+  \item Determinar la formar binomial de
+    $ \left(\frac{1 + \sqrt{3} i }{1 - i} \right)^{17}$.
+
+  \item Determinar la forma binomial de
+    $(-1 + \sqrt{3}i)^n$ para cada $n \en \naturales$.
+\end{enumerate}
