--- a/5-guia/ejercicios-5/ej-23-5.tex
+++ b/5-guia/ejercicios-5/ej-23-5.tex
@@ -18,45 +18,54 @@ $\to
 		\congruencia{5^\alpha}{3}{11}
 	}$\\
 
-$\to \text{Usaré viejo truco de exponenciales de módulo periódicas:}\\
+$\to \text{Busco periodicidad en los restos de las exponenciales $5^{\text{¿}\alpha?} \congruente 1$: }\\
 	\flecha{Busco}[$5^{a} \conga{d} 1$]
 	\llave{l}{
 		\congruencia{5^\alpha}{2}{9} \\
-		\congruencia{5^3}{-1}{9} \flecha{al}[cuadrado] \congruencia{5^6}{1}{9}
-		\flecha{$5^\alpha = 5^{6k+r_6(\alpha)} = (\ob{5^6}{\conga9 1})^k 5^{r_6(\alpha)}$}[tabla de restos]
+		\congruencia{5^3}{-1}{9}
+		\sii
+		\congruencia{5^6}{1}{9}
+		\sii
+		5^{6k+r_6(\alpha)} = (\ob{5^6}{\conga9 1})^k 5^{r_6(\alpha)}.\\
+        \text{Busco, posibles valores para $r_6(\alpha)$: }
 		\begin{array}{|l|l|l|l|l|l|l|}
 			\hline
 			r_6(\alpha)   & 0 & 1 & 2 & 3 & 4 & 5       \\ \hline
 			r_9(5^\alpha) & 1 & 5 & 7 & 8 & 4 & \red{2} \\ \hline
 		\end{array}\\
-		\flecha{por lo}[tanto] \text{para que } \congruencia{5^\alpha}{2}{9} \entonces \boxed{\congruencia{\alpha}{5}{9}}\Tilde     \\
+		\flecha{por lo}[tanto] \text{para que }
+		\congruencia{5^\alpha}{2}{9}
+		\sii
+		\boxed{\congruencia{\alpha}{5}{6}}\Tilde \\
 
 		\separadorCorto
 
-		\congruencia{5^\alpha}{3}{11}\flecha{a ojo}[$\alpha = 2$] \congruencia{\magenta{5^2}}{3}{11} \\
-		\flecha{fermateo}[11 es primo, $11\noDivide 5$]
-		\congruencia{\green{5^{10}}}{1}{11}
-		\flecha{noto que tengo otro}[cuando hago $5^{12}$]
-		\congruencia{\magenta{5^2} \cdot \green{5^{10}}}{3}{11}\\
-		\flecha{para no perder soluciones de $\congruencia{5^\alpha}{3}{11} $}[tabla de restos por las dudas]
+		\congruencia{5^\alpha}{3}{11}
+		\flecha{fermateo en búsqueda de }[periodicidad 11 es primo, $11\noDivide 5$]
+		\congruencia{\green{5^{10}}}{1}{11}\\
+        \text{El PTF no me asegura que no haya un $\alpha < 10$ que también cumpla $\congruencia{5^\alpha}{1}{11}$}\\
 		\begin{array}{|l|l|l|l|l|l|l|l|l|l|l|}
 			\hline
 			r_{10}(\alpha)   & 0 & 1 & 2       & 3 & 4 & 5        \\ \hline
 			r_{11}(5^\alpha) & 1 & 5 & \red{3} & 4 & 9 & \cyan{1} \\ \hline
 		\end{array}\\
-		\flecha{por lo tanto hay}[periodicidad de 5] \text{para que } \congruencia{5^\alpha}{3}{11}
-		\entonces
-		\boxed{\congruencia{\alpha}{2}{5}} \Tilde\\
+		\flecha{por lo tanto hay}[periodicidad de 5] \text{Se obtiene enteonces: }\\
+		\congruencia{5^\alpha}{3}{11}
+		\sii
+		\boxed{\congruencia{\alpha}{2}{5}} \Tilde
 	}$\\
 El sistema
 $\llave{l}{
-		\congruencia{\alpha}{5}{9} \\
+		\congruencia{\alpha}{5}{6} \\
 		\congruencia{\alpha}{2}{5}
 	}$
-se resuelve para $\congruencia{\alpha}{32}{45}$ y además $0<\alpha \leq 140$ lo que se
-cumple para $\alpha = 45k + 32 =
+ 6 y 5 son coprimos, se resuelve para $\congruencia{\alpha}{17}{30}$ y además $0<\alpha \leq 140$ lo que se
+cumple para $\alpha = 30k + 17 =
 	\llaves{lcr}{
-		32  &  \text{ si } & k = 0\\
-		77  &  \text{ si } & k = 1 \\
-		122 &  \text{ si } & k = 2
-	} \to \boxed{\divsetP{25^{70}}{ 5^{32}, 5^{77}, 5^{122} }}  $
+		17  &  \text{ si } & k = 0\\
+		 47 &  \text{ si } & k = 1 \\
+		77 &  \text{ si } & k = 2 \\
+		107 &  \text{ si } & k = 3 \\
+		137 &  \text{ si } & k = 4 \\
+	} \to$
+    \boxed{\divsetP{25^{70}}{ 5^{17}, 5^{47}, 5^{77}, 5^{107}, 5^{137} }}
