--- a/7-guia/ejercicios-7/ej-19-7.tex
+++ b/7-guia/ejercicios-7/ej-19-7.tex
@@ -12,7 +12,7 @@ $
 	\alpha_k
 	\sii
 	f(\alpha_k) = f'(\alpha_k) =  0$,
-por lo tanto  tanto comienzo buscando las raíces de $f$ para sacarme ese
+por lo tanto  tanto comienzo buscando las raíces de $f'$ para sacarme ese
 $a$ de en medio.\\
 
 $
