--- a/7-guia/ejercicios-7/ej-21-7.tex
+++ b/7-guia/ejercicios-7/ej-21-7.tex
@@ -1,2 +1,16 @@
 \ejercicio
-\red{Pasar}
+
+\begin{enumerate}[label=\roman*)] 
+ \item Probar que para todo $a \en \complejos$,
+   el polinomio
+    $f = X^6 - 2X^5 + (1+a)X^3 + (1+a)X^2 - 2X + 1$
+    es divisible por $(X-1)^2$.
+  
+  \item Determinar todos los $a \en \conmplejos$
+    para los cuales 
+    $f$ es divisible por $(X-1)^3$.
+ \end{enumerate}
+
+ \separadorCorto
+
+
