add ej-21-7. Change ytext y otext

--- a/macros/definiciones.tex
+++ b/macros/definiciones.tex
@@ -95,8 +95,8 @@
 \newcommand{\hacer}{{\color{black!30!red}Hacer!}}
 \newcommand{\Hacer}{{\color{black!30!red}\Large Hacer!}}
 \def\Tilde{\quad\checkmark}
-\def\ytext{\quad\text{y}\quad}
-\def\otext{\quad\text{o}\quad}
+\def\ytext{\text{ y }}
+\def\otext{\text{ o }}
 
 % asterisco para hacer llamadas de atención
 \newcommand{\llamada}[1]{%
