--- a/7-guia/ejercicios-7-extra/ej-extra-2-7.tex
+++ b/7-guia/ejercicios-7-extra/ej-extra-2-7.tex
@@ -1,4 +1,16 @@
 \ejercicio
+Factorizar el polinomio 
+$
+P = X^4 - X^5 - 13X^4 + 14X^3 + 35X^2 -49X + 49
+$
+como producto de irreducibles en $\complejos[X], \reales[X] \ytext \racionales[X]$ sabiendo que $\sqrt7$ es una
+raíz múltiple.
 
+\separadorCorto
+
+Un polinomio con coeficientes racionales, y una raíz irracional
+$\alpha = \sqrt7$,
+tendrá también al \textit{conjugado irracional}, $\conj{\alpha} = -\sqrt{7}$
+\footnote{Estoy usando la misma notación para \textit{conjugado racional} y \textit{conjugado complejo}. ¿Está bien? No sé, no me importa mientras se entienda.}
 
 \divPol{X^6-X^5-13X^4+14X^3+35X^2-49X+49}{X^4-14X^2+49}
