--- a/7-guia/ejercicios-7-extra/ej-extra-4-7.tex
+++ b/7-guia/ejercicios-7-extra/ej-extra-4-7.tex
@@ -7,5 +7,7 @@ sabiendo $(f:X^5 + 2X^4 - 7X^3 - 7X^2 + 10X -15) \distinto 1$
 
 \separadorCorto
 
+{\tiny
 \mcd{X^5 + 2X^4 - 7X^3 - 7X^2 + 10X -15}{X^4 - X^3 +6X^2  -5X +5}
+}\\
 \hacer
